# advent-of-code-2025

./: .gitignore  CHANGELOG.md  README.md  index.html  index.html.old  justfile  pyproject.toml
template/: base.html  base.html.jinja  data.json  day.html  day.html.jinja  footer.html  footer.html.jinja  header.html  header.html.jinja  index.html  intro.html.jinja  nav.html.jinja  presentation.html.jinja  utils.html.jinja
template/datas/: day_1.json  day_10.json  day_11.json  day_12.json  day_2.json  day_3.json  day_4.json  day_5.json  day_6.json  day_7.json  day_8.json  day_9.json  presentation.json  utils.json
www/: index.html
www/explaination/: day12.py  day12.txt  day9-2.py
www/explanation/: day_12_2.txt
www/explanation/ideas/: day8.py  day_7-2.txt
www/public/: presentation.html  utils.html
www/public/days/: day_1.html  day_10.html  day_11.html  day_12.html  day_2.html  day_3.html  day_4.html  day_5.html  day_6.html  day_7.html  day_8.html  day_9.html
www/script/: day_1-1.py  day_1-2.py  display_a_file.py  display_name_day.py  display_utils.py  loading.py  main.py  pyconfig.toml
www/script/days/: day_1.py  day_10.py  day_11.py  day_12.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
www/style/: bases.css  footer.css
www/subjects/: day_1-1.txt  day_1-2.txt  day_10-1.txt  day_10-2.txt  day_11-1.txt  day_11-2.txt  day_12-1.txt  day_12-2.txt  day_2-1.txt  day_2-2.txt  day_5-2.txt  day_6-1.txt  day_6-2.txt  day_7-1.txt  day_7-2.txt  day_8-1.txt  day_8-2.txt  day_9-1.txt  day_9-2.txt  names.json
(+28 files in other folders)
