[tool.poetry]
name = "advent-of-code-2025"
version = "0.1.0"
description = ""
authors = ["ulysse chosson <u.chosson@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
jinja2-cli = "^0.8.2"
networkx = "^3.6"
matplotlib = "^3.10.7"
shapely = "^2.1.2"
z3-solver = "^4.15.4.0"
numpy = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
